--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,41 @@
-.venv
-.idea
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Local development configuration
+.env
+
+# IDE / editor specific files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Dependency directories
+venv/
+env/
+env.bak/
+env1/
+env2/
+.venv/
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+*.egg
+
+# Python bytecode
+*.pyc
+*.pyo
+*.pyd
+
+# Logs and databases
+*.log
+*.sqlite3
+
+# Submission and results files
+evaluation/submissions/*.py
+evaluation/results/*.txt
+.evaluation/*
